--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   provider: ^6.0.5
   quantity_input: ^1.0.2
   get: ^4.6.5
+  fl_chart: ^0.60.0
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
